# evocoder

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md
evocoder/config/: settings.py
evocoder/core/: evaluator.py  evaluator_cascade.py  evolutionary_controller.py  program_database.py
evocoder/llm_interface/: base_llm_provider.py  llm_manager.py
evocoder/llm_interface/providers/: gemini_provider.py  open_webui_provider.py
evocoder/problems/numerical_optimizer/: initial_code.py  problem_config.py  test_suite.py
evocoder/problems/simple_line_reducer/: initial_code.py  problem_config.py  test_suite.py
evocoder/utils/: diff_utils.py  logger.py
experiments/: numerical_optimizer_default.yaml
tests/llm_interface/: test_providers.py
